[gd_scene load_steps=6 format=3 uid="uid://d1vhrrpu4ymvq"]

[ext_resource type="Script" path="res://scripts/node_2d.gd" id="1_2c4br"]
[ext_resource type="Texture2D" uid="uid://duqfo4lpitaxs" path="res://assets/Mine_Sprite.png" id="2_02qmw"]
[ext_resource type="Material" uid="uid://dcubnorsgtkkb" path="res://shaders/Building_Particles.tres" id="2_anmpe"]
[ext_resource type="Texture2D" uid="uid://cwwnuhvtcodrv" path="res://assets/Metal_Icon.png" id="3_wjjlc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_434a2"]
size = Vector2(48, 48)

[node name="Mine" type="Node2D"]
script = ExtResource("1_2c4br")

[node name="ProductionTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_434a2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_02qmw")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
process_material = ExtResource("2_anmpe")
texture = ExtResource("3_wjjlc")
one_shot = true

[connection signal="timeout" from="ProductionTimer" to="." method="_on_production_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
